more function work

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <h2 id ="point-bank-total">100</h2>
             <button id = "start-race">Start Race!</button>
             <button id = "place-bet">Place Bet!</button>
+            <button id = "check-if-won">See if you Won</button>
         </div>
         <section class= "betting-selection"> 
             <input id= "bet-value-input" placeholder = "Wager amount?">
