gameover function refined game fully operational

--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
             <button id = "place-bet">Place Bet!</button>
             <button id = "check-if-won">See if you Won</button>
         </div>
-        <section class= "betting-selection"> 
+        <div class= "betting-selection"> 
             <input id= "bet-value-input" placeholder = "Wager amount?">
             
             <button class = "racers" id = "first-racer">2</button>
             <button class = "racers" id = "second-racer">3</button>
             <button class = "racers" id = "third-racer">4</button>
             <button class = "racers" id = "fourth-racer">5</button>
-            
-        </section>
+
+        </div>
     </div>
+    <img id = "gameover" src="images /After every single race at the horse track today. - Imgur.gif">
   <!-- <script src ="js-files/canvas.js"></script>   -->
   <script src="js-files/test.js"></script>   
 </body>
