messages now replacing each other not stacking

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <button class = "racers" id = "fourth-racer">5</button>
 
         </div>
+        <h3 id = "messages"></h3>
     </div>
     <img id = "gameover" src="images /After every single race at the horse track today. - Imgur.gif">
   <!-- <script src ="js-files/canvas.js"></script>   -->
