--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         </div>
         <!--betting HTML-->
         <div class = "displays">
-            <h2 id ="point-bank-display">Point Bank Total</h2>
+            <h2 id ="point-bank-display">Total Points</h2>
             <h2 id ="point-bank-total">100</h2>
             <button id = "start-race">Start Race!</button>
             <button id = "place-bet">Place Bet!</button>
-            <button id = "check-if-won">See if you Won</button>
+            <button id = "check-if-won">Check Payout</button>
         </div>
         <div class= "betting-selection"> 
             <input id= "bet-value-input" placeholder = "Wager amount?">
