bugs fixed after rules added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <button id = "start-race">Start Race!</button>
             <button id = "place-bet">Place Bet!</button>
             <button id = "check-if-won">Check Payout</button>
+            <button id = "rules"> How to Play</button>
         </div>
         <div class= "betting-selection"> 
             <input id= "bet-value-input" placeholder = "Wager amount?">
@@ -54,23 +55,23 @@
        
         <h3 id = "messages"></h3>
     </div> 
-    <button id = "rules"> How to Play</button>
+     <div></div>
     <div id = "rules-text">
         <p class = "title">How to play Place Your Bets!</p> 
         <p>1. Object of the game is to guess the correct winner of the race</p>
         <p>2. In order to proceed the player will do the following in order</p>
-        <p>3. Decide how many points they would like to wager.</p>
-        <p>4. Type in desired bet value into the input box</p>
-        <p>5. Select a racer by its number (note: the odds of the racer winning is a direct correlation to their number. ex: 2 = 2-1 odds)</p>
-        <p>6. Click the place bet button to register your bet with the computer</p>
-        <p>7. Click the Start Race button and cheer for their racer. </p>
-        <p>8. Once race is completed, click on the Check Payout button to learn how much the player has won, or if they lost their money</p>
+        <p> * Decide how many points they would like to wager.</p>
+        <p> * Type in desired bet value into the input box</p>
+        <p> * Select a racer by its number (note: the odds of the racer winning is a direct correlation to their number. ex: 2 = 2-1 odds)</p>
+        <p> * Click the place bet button to register your bet with the computer</p>
+        <p> * Click the Start Race button and cheer for their racer. </p>
+        <p> * Once race is completed, click on the Check Payout button to learn how much the player has won, or if they lost their money</p>
         <p class = "title"> Then rinse and repeat the above steps.</p>
         <p class = "title">Game Rules</p>
-        <p>1. If the playerr's choice matches then winner of the race, then the bet is paid out accordering to odds </p>
+        <p>1. If the player's choice matches then winner of the race, then the bet is paid out accordering to odds </p>
         <p>2. If the player does not choose the winner of the race, then the bet is lost and the user the player also lo0ses the bet if there is a tie!</p>
-        <p>3. The game is over if the player is forced to wager their last point</p>
-    </div>
+        <p>3. The game is over if the player is forced to wager their last point</p> 
+    </div> 
     <img id = "gameover" src="images /After every single race at the horse track today. - Imgur.gif">
 
   <!-- <script src ="js-files/canvas.js"></script>   -->
