audio tracks added files restructured

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
        
         <h3 id = "messages"></h3>
     </div> 
-     <div></div>
+     
     <div id = "rules-text">
         <p class = "title">How to play Place Your Bets!</p> 
         <p>1. Object of the game is to guess the correct winner of the race</p>
@@ -73,7 +73,7 @@
         <p>3. The game is over if the player is forced to wager their last point</p> 
     </div> 
     <img id = "gameover" src="images /After every single race at the horse track today. - Imgur.gif">
-
+    <audio src="images /sound effects /music_zapsplat_astro_race.mp3">d</audio>
   <!-- <script src ="js-files/canvas.js"></script>   -->
   <script src="js-files/test.js"></script>   
 </body>
