late night play soundtrack thoughts after cleaning

--- a/Place-Your-Betstest.html
+++ b/Place-Your-Betstest.html
@@ -73,7 +73,7 @@
         <p>3. The game is over if the player is forced to wager their last point</p> 
     </div> 
     <img id = "gameover" src="images /After every single race at the horse track today. - Imgur.gif">
-    
+    <button id = "music">Toggle Music</button>
   <!-- <script src ="js-files/canvas.js"></script>   -->
   <script src="js-files/test.js"></script>   
 </body>
