forgot to add the new html from test html to index html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
         <p>3. The game is over if the player is forced to wager their last point</p> 
     </div>
     <img id = "gameover" src="images /After every single race at the horse track today. - Imgur.gif">
+    <button id = "music">Music On</button>
+    <button id = "music-off">Music Off</button>
     <script src="js-files/app.js"></script>
 </body>
 </html>
