--- a/test.html
+++ b/test.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Place Your Bets</title>
-    <link rel="stylesheet" href="styles.css" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styleswithboot.css" >
   
 </head>
 <body>
@@ -50,7 +51,8 @@
             <button class = "racers" id = "second-racer">3</button>
             <button class = "racers" id = "third-racer">4</button>
             <button class = "racers" id = "fourth-racer">5</button>
-
+            <button id = "music">Music On</button>
+            <button id = "music-off">Music Off</button>
         </div>
        
         <h3 id = "messages"></h3>
@@ -73,9 +75,9 @@
         <p>3. The game is over if the player is forced to wager their last point</p> 
     </div> 
     <img id = "gameover" src="images /After every single race at the horse track today. - Imgur.gif">
-    <button id = "music">Music On</button>
-    <button id = "music-off">Music Off</button>
+   
   <!-- <script src ="js-files/canvas.js"></script>   -->
   <script src="js-files/test.js"></script>   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
