mobile style max width 500

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PLace Your Bets</title>
     <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="styleswithmedia.css">
 </head>
 <body>
     <div id = "background">
@@ -64,6 +65,7 @@
         <p>1. If the player's choice matches then winner of the race, then the bet is paid out accordering to odds </p>
         <p>2. If the player does not choose the winner of the race, then the bet is lost and the user the player also lo0ses the bet if there is a tie!</p>
         <p>3. The game is over if the player is forced to wager their last point</p> 
+        <p>4. if playing on mobile tap outside of rulebox too make it disappear</p>
     </div>
     <img id = "gameover" src="images /After every single race at the horse track today. - Imgur.gif">
    
