read me icebox additions

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <button id = "music-off">Music Off</button>
         </div>
         <div class= "betting-selection"> 
-            <input id= "bet-value-input" placeholder = "Wager amount?">
+            <input id= "bet-value-input" placeholder = "Wager?">
             
             <button class = "racers" id = "first-racer">2</button>
             <button class = "racers" id = "second-racer">3</button>
